<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentPaymentSuccessful">

    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/success_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_success_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/payment_successful"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_icon" />

    <TextView
        android:id="@+id/payment_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/processed"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_success_text" />

    <TextView
        android:id="@+id/details_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter"
        android:text="@string/details_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_sub" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#35C31A"
        app:layout_constraintTop_toBottomOf="@id/details_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="vertical"/>

    <RelativeLayout
        android:id="@+id/layout_one"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/payment_bg">

        <TextView
            android:id="@+id/ref_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="Reference Number"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/type_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/inter"
            android:text="Payment Type"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ref_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ref_txt"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:text="137292973737"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/type_txt"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:text="Card Payment"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sale_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_below="@id/ref_no"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="Sale ID"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/transaction_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/payment_type"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/inter"
            android:text="Transaction Type"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sale_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/sale_txt"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:text="4562929733"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/transact_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/transaction_txt"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:text="Savings"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/acct_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_below="@id/sale_id"
            android:fontFamily="@font/inter"
            android:text="Account Type"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/acct_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/transact_type"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:text="Account"
            android:textColor="#434343"
            android:textSize="14sp" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="#35C31A"
            android:layout_below="@id/acct_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/calendar_icon"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter"
                android:text="19 May 2023"
                android:textColor="#434343"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/time_icon"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter"
                android:text="03:34 PM"
                android:textColor="#434343"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="2dp"
        android:layout_height="170dp"
        app:layout_constraintStart_toEndOf="@id/layout_one"
        app:layout_constraintTop_toTopOf="@id/layout_one"
        app:layout_constraintBottom_toBottomOf="@id/layout_one"
        android:orientation="vertical"
        android:src="@drawable/dash_line"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_one"
        app:layout_constraintStart_toEndOf="@id/guideline"
        android:background="@drawable/payment_bg2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="Amount Due"
            android:textColor="#434343"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/inter"
            android:text="#300.00"
            android:textStyle="bold"
            android:textColor="#1BAC00"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="Amount Paid"
            android:textColor="#434343"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/print_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_three"
            android:layout_margin="15dp"
            android:height="50dp"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:textSize="8sp"
            android:text="SUCCESSFUL"
            android:textColor="@color/white"
            android:backgroundTint="#1BAC00"/>






    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/print_button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:height="50dp"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="Print"
            android:textColor="@color/white"
            android:backgroundTint="#F1A700"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:height="50dp"
            app:cornerRadius="20dp"
            android:textAllCaps="false"
            android:text="Email"
            android:textColor="@color/white"
            android:backgroundTint="#1BAC00"/>





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>